[project]
name = "enanomapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "measurement>=3.2.2",
    "pynanomapper>=2.1.0",
    "pyyaml>=6.0.3",
]
